# rust-auth-ms

./: Cargo.toml  build.rs
proto/: authentication.proto
src/auth-service/: auth.rs  main.rs  users.rs
src/client/: main.rs
src/health-check-service/: main.rs
